@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-08T16:18:34Z",
+  "timestamp" : "2024-02-09T08:17:30Z",
   "count_outdated" : 1569,
   "uniques_outdated" : 859,
-  "count" : 1597,
-  "uniques" : 874,
+  "count" : 1598,
+  "uniques" : 875,
   "clones" : [
     {
       "timestamp": "2024-01-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -124,6 +124,15 @@
     },
     {
       "timestamp": "2024-02-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
